--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
       - name: "📚  Hashnode Updater"
         uses: "varunsridharan/action-hashnode-blog@1.1.1"
         with:
-          USERNAME: 'samyabrata-maji' # Hashnode Username
+          USERNAME: 'samyabratamaji' # Hashnode Username
           COUNT: 6 # MAX Visisble
           STYLE: "blog-left"
           BLOG_URL: "https://sammaji.hashnode.dev/"
